[package]
name = "sensor-light"
version = "1.3.0"
authors = ["bitmagier <bitmagier@mailbox.org>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "sensor-light"
test = false
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"
itertools = "0.14"
ringbuffer = "0.15"
esp-idf-svc = { version = "0.50.0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45.0"}
veml7700 = "0.2"

[build-dependencies]
embuild = "0.33"

