[package]
name = "sensor-light"
version = "1.4.0-SNAPSHOT"
authors = ["bitmagier <bitmagier@mailbox.org>"]
edition = "2024"
# rust-version = "1.77.0"
resolver = "2"

[[bin]]
name = "sensor-light"
test = false
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]


[dependencies]
log = "0.4"
anyhow = "1.0"
itertools = "0.14"
ringbuffer = "0.15"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45"}
embassy-time = { version = "*", features = ["generic-queue-8"] }
veml7700 = "0.3"

[build-dependencies]
embuild = "0.33"

